# goit

./: project 12  project10  project11  project9.py
part2/project3/: part1.py  (+1 more)
part2/project_12/: main.py  pyproject.toml
part2/project_12/front-end/: add_contact.html  index.html
part2/project_12/migrations/: env.py
part2/project_12/migrations/versions/: 0737933786a0_add_users.py  0a0fd3ef3329_init.py  e4fdb2a70fa2_add_roles.py
part2/project_12/src/database/: config.py  db.py  models.py
part2/project_12/src/repository/: contacts.py  users.py
part2/project_12/src/routes/: auth_router.py  contacts_router.py
part2/project_12/src/schemas/: contact.py  user.py
part2/project_12/src/services/: auth.py  roles.py
part2/project_13/part2/: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
part2/project_13/part2/hw_project/: .env
part2/project_13/part2/hw_project/hw_project/: settings.py  urls.py
part2/project_13/part2/hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
part2/project_13/part2/hw_project/users/: forms.py  models.py  urls.py  views.py
part2/project_13/part2/hw_project/utils/: migration.py
part2/project_13/part2/postgres-data/global/: 1260  pg_control  pg_internal.init
part2/project_13/part2/postgres-data/pg_stat/: pgstat.stat
part2/project_14/: .coverage  .env  .gitignore  README.md  main.py  pyproject.toml  test.db
part2/project_14/docs/: conf.py
part2/project_14/docs/_build/doctrees/: environment.pickle  index.doctree
part2/project_14/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
part2/project_14/migrations/versions/: 2b13ad6c21d2_init.py  9efa02fd850f_add_verify.py
part2/project_14/postgres-data/base/1/: pg_internal.init
part2/project_14/postgres-data/base/16384/: 16387  16400  16408  16410  16412  16413  16419  16427  16428  16431  2224  2604  2606  2620  2657  2659  2662  2664  2667  2673  2674  2699  3455  3501  3503  3534  5002  pg_internal.init
part2/project_14/postgres-data/global/: 2671  pg_control  pg_internal.init
part2/project_14/postgres-data/pg_stat/: pgstat.stat
part2/project_14/src/database/: config.py  models.py
part2/project_14/src/repository/: contacts.py  users.py
part2/project_14/src/routes/: auth_router.py  contacts_router.py  users_router.py
part2/project_14/src/schemas/: contact.py  user.py
part2/project_14/src/services/: auth.py  email.py  roles.py
part2/project_14/src/templates/: index.html
part2/project_14/tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py  test_unit_repository_contacts.py
part2/project_2/: Dockerfile  pyproject.toml  requirements.txt
part2/project_2/bot_poetry/: AddressBook.py  CommandHandler.py  Field.py  Record.py  Table.py  backup_address_book.pkl  decorators.py  main.py
part2/project_7/: alembic.ini  models.py  my_select.py  pyproject.toml  seed.py  university
part2/project_7/alembic/versions/: 7667dc3c8c01_initial_migration.py
(+231 files in other folders)
