[tool.poetry]
name = "pyprojectc"
version = "0.1.0"
description = ""
authors = ["artemLink <45370882+artemLink@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
