[tool.poetry]
name = "hw10-web"
version = "0.1.0"
description = ""
authors = ["BogSyn <ravlykplus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
pymongo = "^4.6.2"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
